--- a/app/src/sass/_layout.scss
+++ b/app/src/sass/_layout.scss
@@ -51,6 +51,7 @@ main {
     @extend %overflow-auto;
     width: $main-width;
     transform: translate3d($nav-width, $titlebar-height, 0);
+    overflow-x: hidden;
 }
 
 //
